--- a/projects/demo/src/index.html
+++ b/projects/demo/src/index.html
@@ -5,6 +5,7 @@
   <title>Demo</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="7ZkLSdH2HRQ78m5Dwy0MnBOV9C47OX-wRUYizlEuNUE" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
